# zalgo

./: .dockerignore  .eslintrc  .gitignore  .prettierrc  1.0.0_openapi.yaml  Dockerfile  Readme.md  jest.config.js  package-lock.json  package.json  tsconfig.eslint.json  tsconfig.json
.github/: dependabot.yml
.github/workflows/: docker-image.yml
example/: index.html
native/zalgo-captcha/: package.json
pkg/zalgo-captcha/: Cargo.toml  README.md  package-lock.json  package.json
pkg/zalgo-captcha/lib/: index.js
pkg/zalgo-captcha/native/: Cargo.toml  artifacts.json
pkg/zalgo-captcha/native/src/: lib.rs
pkg/zalgo-captcha/src/: lib.rs
src/: config.ts  index.ts  server.ts
src/api/v1/: captcha.ts
src/middleware/: index.ts
src/model/: index.ts
tests/: index.ts
types/: index.d.ts
types/captcha/: index.d.ts
types/polka-send-type/: index.d.ts
types/zalgo-captcha/: index.d.ts
