[package]
name = "zalgo-captcha"
version = "0.1.0"
description = "Native captcha generator"
authors = ["Antonino Bertulla <abertulla@gmail.com>"]
license = "MIT"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]

[dependencies]
captcha = "0.0.8"
base64 = "0.13.0"
