[package]
name = "zalgo-captcha"
version = "0.1.0"
authors = ["Antonino Bertulla <abertulla@gmail.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "zalgo_captcha"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.7.1"

[dependencies]
neon = "0.7.1"
captcha = "0.0.8"
base64 = "0.13.0"
